--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       timeout: 5s
       retries: 5
     networks:
-      - app-network
+      - ${SERVER_NAME}_net
 
   server:
     image: ${IMMAGE_NAME}
@@ -43,7 +43,7 @@ services:
       postgres:
         condition: service_healthy
     networks:
-      - app-network
+      - ${SERVER_NAME}_net
 
   # frontend:
   #   image: ${IMMAGE_NAME}
@@ -57,7 +57,7 @@ services:
   #   ports:
   #     - '5080:8545'
   #   networks:
-  #     - app-network
+  #     - ${SERVER_NAME}_net
 
   prisma-studio:
     image: ${IMMAGE_NAME}
@@ -77,7 +77,7 @@ services:
       postgres:
         condition: service_healthy
     networks:
-      - app-network
+      - ${SERVER_NAME}_net
 
   caddy:
     image: caddy:latest
@@ -103,10 +103,10 @@ services:
       # frontend:
       #   condition: service_started
     networks:
-      - app-network
+      - ${SERVER_NAME}_net
 
 networks:
-  app-network:
+  ${SERVER_NAME}_net:
     driver: bridge
 
 volumes:
