--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,16 +83,14 @@ services:
     image: caddy:latest
     extra_hosts:
       - "host.docker.internal:host-gateway"
-    container_name: caddy
+    container_name: ${SERVER_NAME}_caddy
     restart: unless-stopped
     profiles:
       - prod
       - caddy
     ports:
-      - '80:80'
       - '8005:8005'
       - '8006:8006'
-      - '443:443'
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile
       - caddy_data:/data
